# pe-ai-tremfya-derm

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
conf/: trust_mode.yml
conf/kpi_registry/: fulfillment_rate_84d.yml  persistency_rate_180d.yml
docs/: agent_contracts.md  architecture.md  architecture_diagrams.md
pe_ai_agents/agents/dev_adhoc/: __init__.py  quick_analyst.py
pe_ai_agents/agents/dev_build/: __init__.py  cohort_builder.py  feature_builder.py  model_builder.py  qc_reviewer.py
pe_ai_agents/agents/dev_enhance/: __init__.py  tweaker.py  (+1 more)
pe_ai_agents/models/: __init__.py  context.py  risk.py
pe_ai_agents/runtime/: __init__.py  agent_base.py  trust_mode.py  workspace.py
pe_ai_agents/skills/: __init__.py  alerts.py  approval_gate.py  brand_context.py  kpi_registry.py  mlflow_tracker.py  provenance.py
pe_ai_agents/tools/: __init__.py  argo.py  conf.py  db.py  dqm.py  email.py  journey.py  kedro.py
qc_dashboard/: Dockerfile
qc_dashboard/app/: main.py
qc_dashboard/deploy/: configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
qc_dashboard/frontend/: app.js  index.html  style.css
tests/: conftest.py
tests/agents/: test_dev_build.py  test_dev_enhance.py  test_ops_runners.py  test_qc_watcher.py  test_quick_analyst.py
tests/skills/: test_alerts.py  test_approval_gate.py  test_brand_context.py  test_kpi_registry.py  test_mlflow_tracker.py  test_provenance.py
tests/tools/: test_tool_fakes.py
workspaces/dev/: cli.py
workspaces/ops/: cli.py
(+6 files in other folders)
