[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pe_ai_tremfya_derm"
version = "0.1.0"
description = "Agentic harness for the PE.AI Tremfya Derm (PsO + PsA, co-trained insights model) brand-indication. Reference implementation -- clone for sibling brand-indications."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "PE.AI team" }]
license = { text = "Proprietary - Johnson & Johnson" }
dependencies = [
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]

[project.scripts]
pe-ai-ops = "workspaces.ops.cli:main"
pe-ai-dev = "workspaces.dev.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pe_ai_agents*", "workspaces*", "qc_dashboard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
